# Yaga

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  PRIVACY.md  PROJECT_ASSESSMENT.md  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.json
data/: io.github.miscde.Yaga.desktop  io.github.miscde.Yaga.metainfo.xml
docs/: camera-validation.md
tests/: test_core.py  test_integration_nextcloud.py  test_recent_changes.py  test_symlink_detection.py
tools/: memory_profiler.py
yaga/: __init__.py  app.py  camera.py  camera_controls.py  camera_devices.py  camera_geo.py  camera_orientation.py  camera_torch.py  camera_widgets.py  config.py  database.py  editor.py  gallery_grid.py  i18n.py  models.py  nextcloud.py  people_window.py  qr.py  scanner.py  settings_window.py  thumbnails.py  tracer.py  viewer.py
yaga/data/: camera.css
yaga/editor/: __init__.py  _pil.py  filters.py  frames.py  stickers.py  text.py  view.py
yaga/faces/: __init__.py  clusterer.py  detector.py  indexer.py  models.py  repository.py
