[project]
name = "yaga-gallery"
version = "0.1.0"
description = "GTK4/libadwaita gallery app"
requires-python = ">=3.11"
dependencies = [
    # Pillow floor: 10.3 is the first release after CVE-2024-28219
    # (buffer overflow in ICC profile parsing, exploitable via crafted images).
    "Pillow>=10.3",
    "pycairo>=1.25",
    "PyGObject>=3.46",
    # defusedxml hardens the PROPFIND parser against XML billion-laughs / DoS
    # from malicious or MitM'd Nextcloud responses.
    "defusedxml>=0.7",
]

[project.scripts]
yaga = "yaga.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
yaga = [
    "data/icons/hicolor/128x128/apps/*.png",
    "data/icons/hicolor/scalable/apps/*.svg",
    "data/icons/hicolor/symbolic/apps/*.svg",
    "data/icons/*.png",
    "data/*.css",
]

[tool.setuptools.data-files]
"share/applications" = ["data/io.github.miscde.Yaga.desktop"]
"share/metainfo" = ["data/io.github.miscde.Yaga.metainfo.xml"]
"share/icons/hicolor/128x128/apps" = [
    "yaga/data/icons/hicolor/128x128/apps/io.github.miscde.Yaga.png",
]

[tool.pytest.ini_options]
pythonpath = ["."]
